fix(toolbar): vertical icon alignment for multi-line labels

--- a/src/components/Toolbar/_mixins.scss
+++ b/src/components/Toolbar/_mixins.scss
@@ -44,6 +44,11 @@ $toolbar__panel__sizing__width: carbon--mini-units(
   $count: 32,
 );
 
+/// Nav list title item padding-top
+$nav__item__title__icon__padding__top: carbon--mini-units(
+  $count: 0.0625,
+);
+
 /// Panel transition timing function.
 /// @type Length
 $toolbar__panel__transition__timing-function: $timing-function;
@@ -163,7 +168,7 @@ $toolbar__panel__transition__timing-function: $timing-function;
 
   &__nav__item__title {
     &--icon {
-      padding-top: carbon--mini-units($count: 0.0625);
+      padding-top: $nav__item__title__icon__padding__top;
       margin-left: $carbon--spacing-04;
     }
   }
@@ -171,7 +176,7 @@ $toolbar__panel__transition__timing-function: $timing-function;
   &__nav__list__title {
     &--icon {
       #{get-component-namespace($component-name: nav)}__list__item__content {
-        padding-top: carbon--mini-units($count: 0.0625);
+        padding-top: $nav__item__title__icon__padding__top;
       }
     }
   }
